<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Form</class>
 <widget class="QWidget" name="Form">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>394</width>
    <height>171</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="2" column="0">
    <widget class="QLabel" name="label_4">
     <property name="text">
      <string>Title</string>
     </property>
    </widget>
   </item>
   <item row="3" column="0">
    <widget class="QLabel" name="label_3">
     <property name="text">
      <string>Notes</string>
     </property>
    </widget>
   </item>
   <item row="5" column="0">
    <widget class="QLabel" name="label_5">
     <property name="text">
      <string>Time</string>
     </property>
    </widget>
   </item>
   <item row="5" column="1">
    <widget class="QTimeEdit" name="timeEdit"/>
   </item>
   <item row="4" column="0">
    <widget class="QLabel" name="label_2">
     <property name="text">
      <string>Description</string>
     </property>
    </widget>
   </item>
   <item row="5" column="2">
    <spacer name="horizontalSpacer">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>40</width>
       <height>20</height>
      </size>
     </property>
    </spacer>
   </item>
   <item row="4" column="1" colspan="2">
    <widget class="QLineEdit" name="descriptionLineEdit"/>
   </item>
   <item row="0" column="1" colspan="2">
    <widget class="QLineEdit" name="nameLineEdit"/>
   </item>
   <item row="3" column="1" colspan="2">
    <widget class="QLineEdit" name="notesLineEdit"/>
   </item>
   <item row="1" column="0" colspan="3">
    <widget class="Line" name="line">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
   </item>
   <item row="0" column="0">
    <widget class="QLabel" name="label">
     <property name="text">
      <string>Template Name</string>
     </property>
    </widget>
   </item>
   <item row="2" column="1" colspan="2">
    <widget class="QLineEdit" name="titleLineEdit"/>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>nameLineEdit</sender>
   <signal>editingFinished()</signal>
   <receiver>Form</receiver>
   <slot>templateNameEntered()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>382</x>
     <y>20</y>
    </hint>
    <hint type="destinationlabel">
     <x>594</x>
     <y>33</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>titleLineEdit</sender>
   <signal>editingFinished()</signal>
   <receiver>Form</receiver>
   <slot>titleEntered()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>444</x>
     <y>62</y>
    </hint>
    <hint type="destinationlabel">
     <x>597</x>
     <y>69</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>notesLineEdit</sender>
   <signal>editingFinished()</signal>
   <receiver>Form</receiver>
   <slot>notesEntered()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>448</x>
     <y>86</y>
    </hint>
    <hint type="destinationlabel">
     <x>596</x>
     <y>94</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>descriptionLineEdit</sender>
   <signal>editingFinished()</signal>
   <receiver>Form</receiver>
   <slot>descriptionEntered()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>428</x>
     <y>111</y>
    </hint>
    <hint type="destinationlabel">
     <x>572</x>
     <y>120</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>timeEdit</sender>
   <signal>timeChanged(QTime)</signal>
   <receiver>Form</receiver>
   <slot>timeEntered(QTime)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>448</x>
     <y>134</y>
    </hint>
    <hint type="destinationlabel">
     <x>495</x>
     <y>143</y>
    </hint>
   </hints>
  </connection>
 </connections>
 <slots>
  <slot>templateNameEntered()</slot>
  <slot>titleEntered()</slot>
  <slot>notesEntered()</slot>
  <slot>descriptionEntered()</slot>
  <slot>timeEntered(QTime)</slot>
 </slots>
</ui>
